manifest/nginx/nginx-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: logger
  name: nginx-daemonset
  namespace: webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      name: logger
  template:
    metadata:
      labels:
        name: logger
        app: nginx
    spec:
      containers:
      - image: docker.io/nginx:1.27.2-alpine
        name: nginx-logger
        ports:
        - containerPort: 80
        resources: {}
